--- a/XEEnglish/ExpendCalss/Setting/PersonInfo/NeTNameAndDomicileVC.xib
+++ b/XEEnglish/ExpendCalss/Setting/PersonInfo/NeTNameAndDomicileVC.xib
@@ -21,7 +21,7 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
                     <connections>
                         <outlet property="delegate" destination="-1" id="NRO-dg-V19"/>
                     </connections>
