--- a/XEEnglish/ExpendCalss/Login/ForgetPassWordVC.xib
+++ b/XEEnglish/ExpendCalss/Login/ForgetPassWordVC.xib
@@ -21,7 +21,7 @@
                     <rect key="frame" x="15" y="80" width="200" height="40"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                     <connections>
                         <outlet property="delegate" destination="-1" id="4lm-Ul-tfo"/>
                     </connections>
@@ -30,7 +30,7 @@
                     <rect key="frame" x="15" y="140" width="290" height="40"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                     <connections>
                         <outlet property="delegate" destination="-1" id="viB-gm-Xmk"/>
                     </connections>
